--- a/src/app/theme/components/app-header/app-header.component.html
+++ b/src/app/theme/components/app-header/app-header.component.html
@@ -1,7 +1,7 @@
 <div class="app-header">
   <a class="brand" routerLink="/">
     <img height="30" src="assets/images/logo.svg" alt="" />
-    <span>总后台</span>
+    <span>{{appName}}</span>
   </a>
 
   <!--<ul class="nav">
