--- a/src/app/pages/login/login.component.less
+++ b/src/app/pages/login/login.component.less
@@ -1,29 +1,56 @@
 .login {
   width: 100%;
   height: 100%;
-  background: #2f353a;
 
-  & > div {
+  & > img {
+    width: 100%;
     height: 100%;
   }
 
-  &-form {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
+  &-content {
+    width: 840px;
+    height: 480px;
+    display: inline-block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin: -240px -420px;
+    border-radius: 5px;
+    box-sizing: border-box;
+    padding-left: 20px;
     background: #fff;
 
-    form {
-      margin: 0 auto;
-      width: 450px;
-      height: 450px;
+    .form-left {
+      float: left;
+      width: 398px;
+      height: 420px;
+      display: inline-block;
+      margin-top: auto;
+
+      h3 {
+        width: 100%;
+        text-align: center;
+        font-size: 22px;
+        color: #666;
+      }
+
+      .login-form {
+        margin: 0 auto;
+        max-width: 300px;
+        max-height: 300px;
+        padding-top: 25px;
+      }
+
+      .login-form-button {
+        width: 100%;
+        margin-top: 15px;
+      }
     }
 
-    h2 {
-      text-align: center;
-      margin-bottom: 40px;
+    .form-right {
+      float: right;
+      height: 480px;
+      margin-top: auto;
     }
   }
 }
