--- a/src/app/theme/components/app-body/app-body.component.less
+++ b/src/app/theme/components/app-body/app-body.component.less
@@ -1,7 +1,7 @@
 .app-body {
   position: relative;
   overflow-x: hidden;
-  padding-top: 45px;
+  padding-top: 35px;
   min-height: calc(100vh - 110px);
 
   .breadcrumb {
@@ -9,12 +9,24 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 45px;
+    height: 35px;
     display: flex;
     align-items: center;
-    background: #fff;
-    border-bottom: 1px solid #c8ced3;
-    padding: 12px 16px;
+    //background: #fff;
+    //border-bottom: 1px solid #c8ced3;
+    //padding: 12px 16px;
+    padding-left: 12px;
+    padding-top: 16px;
+
+    span {
+      i {
+        margin-right: 5px;
+      }
+
+      span {
+       color: #a5a5a5;
+      }
+    }
   }
 
   .main {
