--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -22,7 +22,7 @@
         </nz-form-item>
         <nz-form-item>
           <nz-form-control>
-            <button nz-button class="login-form-button" nzType="primary" [disabled]="!validateForm.valid" (click)="submitForm()">登录</button>
+            <button nz-button class="login-form-button" nzType="primary" [disabled]="!validateForm.valid">登录</button>
           </nz-form-control>
         </nz-form-item>
       </form>
