--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -9,7 +9,7 @@
         <nz-form-item>
           <nz-form-control nzErrorTip="请输入用户账号!">
             <nz-input-group nzPrefixIcon="user">
-              <input type="text" nz-input formControlName="userName" placeholder="用户名" />
+              <input type="text" nz-input formControlName="username" placeholder="用户名" />
             </nz-input-group>
           </nz-form-control>
         </nz-form-item>
@@ -22,7 +22,7 @@
         </nz-form-item>
         <nz-form-item>
           <nz-form-control>
-            <button nz-button class="login-form-button" nzType="primary" [disabled]="!validateForm.valid">登录</button>
+            <button nz-button class="login-form-button" nzType="primary" [nzLoading]="isLoadingOne" [disabled]="!validateForm.valid">登录</button>
           </nz-form-control>
         </nz-form-item>
       </form>
@@ -31,3 +31,4 @@
     <div style="clear:both">&nbsp;</div>
   </div>
 </div>
+
