--- a/src/app/pages/init/init.component.html
+++ b/src/app/pages/init/init.component.html
@@ -1,1 +1,4 @@
-<p>init works!</p>
+<div class="init">
+  <nz-spin nzSimple [nzSize]="'large'"></nz-spin>
+  <div class="init-text"><span>正在初始化……</span></div>
+</div>
