--- a/src/app/theme/components/app-header/app-header.component.html
+++ b/src/app/theme/components/app-header/app-header.component.html
@@ -45,7 +45,7 @@
           <a>修改密码</a>
         </li>
         <li nz-menu-item>
-          <a>退出登录</a>
+          <a (click)="logout()">退出登录</a>
         </li>
       </ul>
     </nz-dropdown>
