--- a/src/app/pages/not-found/not-found.component.html
+++ b/src/app/pages/not-found/not-found.component.html
@@ -1,1 +1,5 @@
-<p>页面不存在!</p>
+<nz-result nzStatus="404" nzTitle="404" nzSubTitle="抱歉，您访问的页面不存在！">
+  <div nz-result-extra>
+    <button nz-button nzType="primary">返回</button>
+  </div>
+</nz-result>
