--- a/src/app/theme/layouts/default/default.component.html
+++ b/src/app/theme/layouts/default/default.component.html
@@ -1,9 +1,12 @@
-<div class="default-layout" [class.aside-collapsed]="collapsed">
-  <app-header></app-header>
-  <app-body></app-body>
-  <app-aside
-    [collapsed]="collapsed"
-    (toggleCollapsed)="onToggleCollapsed($event)"
-  ></app-aside>
-  <app-footer></app-footer>
-</div>
+<nz-spin [nzSpinning]="isSpinning" nzTip="努力加载中...">
+  <div class="default-layout" [class.aside-collapsed]="collapsed">
+    <app-header (loading)="showSpinning($event)"></app-header>
+    <app-body></app-body>
+    <app-aside
+      [collapsed]="collapsed"
+      (toggleCollapsed)="onToggleCollapsed($event)"
+    ></app-aside>
+    <app-footer></app-footer>
+  </div>
+</nz-spin>
+
