--- a/src/app/pages/setting/menu-manage/menu-manage.component.less
+++ b/src/app/pages/setting/menu-manage/menu-manage.component.less
@@ -6,6 +6,16 @@
 
 }
 
+.menu-type {
+  margin-left: 85px;
+  margin-bottom: 20px;
+  font-size: 14px;
+
+  &>label>span{
+    margin-right: 10px;
+  }
+}
+
 nz-form-control {
   min-width: 550px;
 }
