--- a/src/app/pages/setting/menu-manage/menu-manage.component.html
+++ b/src/app/pages/setting/menu-manage/menu-manage.component.html
@@ -1,19 +1,19 @@
 <!--菜单列表-->
 <nz-card nzTitle="用户菜单列表" [nzExtra]="extraTemplate">
   <div style="margin-bottom: 16px;">
-    <button nz-button nzType="primary" (click)="showAddMenuModal()"><i nz-icon type="plus"></i>新增</button>
+    <button nz-button nzType="primary" (click)="showAddMenuModal(1)"><i nz-icon type="plus"></i>新增</button>
   </div>
   <!--列表-->
-  <nz-table #expandTable [nzData]="menuList">
+  <nz-table #expandTable [nzData]="menuList" [nzShowPagination]="false">
     <thead>
     <tr>
-      <th nzWidth="20%">名称</th>
-      <th nzWidth="10%">图标</th>
-      <th nzWidth="10%">类型</th>
-      <th nzWidth="10%">排序</th>
-      <th nzWidth="20%">路由</th>
-      <th nzWidth="15%">授权标识</th>
-      <th>操作</th>
+      <th nzWidth="20%" nzAlign="center">名称</th>
+      <th nzWidth="10%" nzAlign="center">图标</th>
+      <th nzWidth="10%" nzAlign="center">类型</th>
+      <th nzWidth="10%" nzAlign="center">排序</th>
+      <th nzWidth="20%" nzAlign="center">路由</th>
+      <th nzWidth="15%" nzAlign="center">授权标识</th>
+      <th nzAlign="center">操作</th>
     </tr>
     </thead>
     <tbody>
@@ -28,12 +28,23 @@
           >
             {{ item.title }}
           </td>
-          <td>{{ item.icon }}</td>
-          <td>{{ item.type }}</td>
-          <td>{{ item.sort }}</td>
-          <td>{{ item.link }}</td>
-          <td>{{ item.perms }}</td>
-          <td>删除</td>
+          <td nzAlign="center">
+            <i nz-icon [nzType]="item.icon"></i>
+          </td>
+          <td *ngIf="item.type === 1" nzAlign="center">
+            <nz-tag [nzColor]="'blue'">菜单</nz-tag>
+          </td>
+          <td *ngIf="item.type === 2" nzAlign="center">
+            <nz-tag [nzColor]="'green'">按钮</nz-tag>
+          </td>
+          <td nzAlign="center">{{ item.sort }}</td>
+          <td nzAlign="center">{{ item.link }}</td>
+          <td nzAlign="center">{{ item.perms }}</td>
+          <td nzAlign="center">
+            <a (click)="showAddMenuModal(2)">修改</a>
+            <nz-divider nzType="vertical"></nz-divider>
+            <a (click)="delMenu(item.id, item.title)">删除</a>
+          </td>
         </tr>
       </ng-container>
     </ng-container>
@@ -41,8 +52,8 @@
   </nz-table>
 </nz-card>
 <ng-template #extraTemplate>
-  <span style="cursor: pointer;">
-    <i nz-icon [nzType]="'sync'" [nzSpin]="false"></i><!--动态加载的，点击刷新的时候把false改成true-->
+  <span style="cursor: pointer;" (click)="refreshMenuList()">
+    <i nz-icon [nzType]="'sync'" [nzSpin]="isRefreshMenuList"></i><!--动态加载的，点击刷新的时候把false改成true-->
     <span style="margin-left: 5px;">刷新数据</span>
   </span>
 </ng-template>
