--- a/src/app/pages/setting/menu-manage/menu-manage.component.less
+++ b/src/app/pages/setting/menu-manage/menu-manage.component.less
@@ -3,7 +3,14 @@
   padding: 24px;
   min-height: 280px;
 
+  &-action {
+    margin-bottom: 25px;
 
+    button {
+      margin-left: 15px;
+    }
+
+  }
 }
 
 .menu-type {
