--- a/src/app/pages/setting/role-manage/role-manage.component.html
+++ b/src/app/pages/setting/role-manage/role-manage.component.html
@@ -4,11 +4,54 @@
       <nz-option *ngFor="let appInfo of appDataList" [nzLabel]="appInfo.appName" [nzValue]="appInfo.appId"></nz-option>
     </nz-select>
     <nz-input-group [nzSuffix]="suffixTemplate">
-      <input type="text" nz-input [(ngModel)]="roleName" placeholder="角色名称" />
+      <input type="text" nz-input [(ngModel)]="roleName" placeholder="角色名称"/>
     </nz-input-group>
     <button nz-button nzType="default"><i nz-icon nzType="search"></i>查询</button>
     <button nz-button nzType="primary"><i nz-icon type="plus"></i>新增</button>
-    <button class="action-btn-del" nz-button nzType="danger"><i nz-icon type="delete"></i>删除</button>
+    <button nz-button nzType="danger"><i nz-icon type="delete"></i>删除</button>
+  </div>
+  <div class="list-table">
+    <nz-table
+      #rowSelectionTable
+      nzShowPagination
+      nzShowSizeChanger
+      nzBordered
+      [nzData]="listOfAllData"
+      (nzCurrentPageDataChange)="currentPageDataChange($event)"
+    >
+      <thead>
+        <tr>
+          <th
+            nzShowCheckbox
+            [(nzChecked)]="isAllDisplayDataChecked"
+            [nzIndeterminate]="isIndeterminate"
+            (nzCheckedChange)="checkAll($event)"
+          ></th>
+          <th nzWidth="30%" nzAlign="center">名称</th>
+          <th nzWidth="30%" nzAlign="center">备注</th>
+          <th nzWidth="20%" nzAlign="center"
+              nzShowSort
+          >
+            创建时间
+          </th>
+          <th nzWidth="20%" nzAlign="center">操作</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let data of rowSelectionTable.data">
+          <td
+            nzShowCheckbox
+            [(nzChecked)]="mapOfCheckedId[data.id]"
+            [nzDisabled]="data.disabled"
+            (nzCheckedChange)="refreshStatus()"
+          ></td>
+          <td nzAlign="center">{{ data.name }}</td>
+          <td nzAlign="center">{{ data.age }}</td>
+          <td nzAlign="center">{{ data.address }}</td>
+          <td nzAlign="center">{{ data.name }}</td>
+        </tr>
+      </tbody>
+    </nz-table>
   </div>
 </nz-card>
 
