--- a/src/assets/styles/ng-zorro.less
+++ b/src/assets/styles/ng-zorro.less
@@ -1,4 +1,5 @@
-@import "~node_modules/ng-zorro-antd/ng-zorro-antd.less";
+//@import "~node_modules/ng-zorro-antd/ng-zorro-antd.less";
+@import "~_ng-zorro-antd@8.5.2@ng-zorro-antd/ng-zorro-antd.less";
 
 // The prefix to use on all css classes from ant.
 @ant-prefix : ant;
@@ -139,9 +140,9 @@
 @btn-default-bg : #fff;
 @btn-default-border : @border-color-base;
 
-@btn-danger-color : @error-color;
-@btn-danger-bg : @background-color-base;
-@btn-danger-border : @border-color-base;
+//@btn-danger-color : @error-color;
+//@btn-danger-bg : @background-color-base;
+//@btn-danger-border : @border-color-base;
 
 @btn-disable-color : @disabled-color;
 @btn-disable-bg : @disabled-bg;
