--- a/src/app/pages/setting/role-manage/role-manage.component.html
+++ b/src/app/pages/setting/role-manage/role-manage.component.html
@@ -6,7 +6,7 @@
     <nz-input-group [nzSuffix]="suffixTemplate">
       <input type="text" nz-input [(ngModel)]="roleName" placeholder="角色名称"/>
     </nz-input-group>
-    <button nz-button nzType="default"><i nz-icon nzType="search"></i>查询</button>
+    <button nz-button nzType="default" (click)="search()"><i nz-icon nzType="search"></i>查询</button>
     <button nz-button nzType="primary"><i nz-icon type="plus"></i>新增</button>
     <button nz-button nzType="danger"><i nz-icon type="delete"></i>删除</button>
   </div>
@@ -48,7 +48,11 @@
           <td nzAlign="center">{{ data.name }}</td>
           <td nzAlign="center">{{ data.age }}</td>
           <td nzAlign="center">{{ data.address }}</td>
-          <td nzAlign="center">{{ data.name }}</td>
+          <td nzAlign="center">
+            <a>编辑</a>
+            <nz-divider nzType="vertical"></nz-divider>
+            <a>删除</a>
+          </td>
         </tr>
       </tbody>
     </nz-table>
