好好学习，天天向上

--- a/src/app/pages/setting/role-manage/role-manage.component.less
+++ b/src/app/pages/setting/role-manage/role-manage.component.less
@@ -18,3 +18,21 @@
 
   }
 }
+
+nz-form-control {
+  min-width: 520px;
+}
+
+.menu-per {
+  &>label>span {
+    color: #262626;
+    font-size: 14px;
+  }
+  padding-left: 58px;
+
+  .menu-per-tree {
+    position: relative;
+    left: 58px;
+    top: -26px;
+  }
+}
