--- a/src/app/pages/setting/role-manage/role-manage.component.html
+++ b/src/app/pages/setting/role-manage/role-manage.component.html
@@ -7,16 +7,23 @@
       <input type="text" nz-input [(ngModel)]="roleName" placeholder="角色名称"/>
     </nz-input-group>
     <button nz-button nzType="default" (click)="search()"><i nz-icon nzType="search"></i>查询</button>
-    <button nz-button nzType="primary"><i nz-icon type="plus"></i>新增</button>
+    <button nz-button nzType="primary" (click)="addRole()"><i nz-icon type="plus"></i>新增</button>
     <button nz-button nzType="danger"><i nz-icon type="delete"></i>删除</button>
   </div>
   <div class="list-table">
     <nz-table
-      #rowSelectionTable
+      #roleTable
       nzShowPagination
       nzShowSizeChanger
       nzBordered
+      [nzFrontPagination]="false"
       [nzData]="listOfAllData"
+      [nzLoading]="loading"
+      [nzTotal]="total"
+      [(nzPageIndex)]="pageIndex"
+      [(nzPageSize)]="pageSize"
+      (nzPageIndexChange)="search()"
+      (nzPageSizeChange)="search(true)"
       (nzCurrentPageDataChange)="currentPageDataChange($event)"
     >
       <thead>
@@ -38,18 +45,18 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let data of rowSelectionTable.data">
+        <tr *ngFor="let data of roleTable.data">
           <td
             nzShowCheckbox
             [(nzChecked)]="mapOfCheckedId[data.id]"
             [nzDisabled]="data.disabled"
             (nzCheckedChange)="refreshStatus()"
           ></td>
-          <td nzAlign="center">{{ data.name }}</td>
-          <td nzAlign="center">{{ data.age }}</td>
-          <td nzAlign="center">{{ data.address }}</td>
+          <td nzAlign="center">{{ data.roleName }}</td>
+          <td nzAlign="center">{{ data.description }}</td>
+          <td nzAlign="center">{{ data.dateCreated }}</td>
           <td nzAlign="center">
-            <a>编辑</a>
+            <a (click)="editRole(data.id)">编辑</a>
             <nz-divider nzType="vertical"></nz-divider>
             <a>删除</a>
           </td>
@@ -70,3 +77,47 @@
   (click)="roleName = null"
 ></i
 ></ng-template>
+
+<!--新增、编辑角色-->
+<nz-modal *ngIf="isShowDialog"
+          [(nzVisible)]="isShowDialog"
+          nzWidth="800"
+          [nzTitle]="dialogType === 1 ? '新增' : '修改'"
+          (nzOnCancel)="handleCancelDialog(dialogType)"
+          (nzOnOk)="handleOkDialog(dialogType)"
+          [nzOkLoading]="isAddOkLoading">
+
+  <form nz-form [formGroup]="addOrEditForm">
+    <nz-form-item>
+      <nz-form-label [nzSm]="4" [nzXs]="24" nzFor="roleName" nzRequired>名称</nz-form-label>
+      <nz-form-control [nzSm]="10" [nzXs]="24">
+        <input nz-input id="roleName" formControlName="roleName" placeholder="角色名称"/>
+        <nz-form-explain *ngIf="addOrEditForm.get('roleName')?.dirty && addOrEditForm.get('roleName')?.errors">角色名称不为空!
+        </nz-form-explain>
+      </nz-form-control>
+    </nz-form-item>
+    <nz-form-item>
+      <nz-form-label [nzSm]="4" [nzXs]="24" nzFor="roleDesc">备注</nz-form-label>
+      <nz-form-control [nzSm]="10" [nzXs]="24">
+        <input nz-input id="roleDesc" formControlName="roleDesc"
+               placeholder="备注"/>
+      </nz-form-control>
+    </nz-form-item>
+  </form>
+  <div class="menu-per">
+    <label><span>菜单授权:</span></label>
+    <nz-tree class="menu-per-tree"
+      #nzTreeMenus
+      [nzData]="nzTreeMenusData"
+      nzCheckable
+      [nzCheckedKeys]="checkedKeys"
+      [nzExpandedKeys]="expandedKeys"
+      [nzSelectedKeys]="checkedKeys"
+      (nzClick)="nzTreeMenusClick($event)"
+      (nzCheckBoxChange)="nzTreeMenusCheck($event)"
+      (nzExpandChange)="nzTreeMenusCheck($event)"
+    >
+    </nz-tree>
+  </div>
+
+</nz-modal>
