好好学习，天天向上

--- a/src/app/pages/setting/role-manage/role-manage.component.html
+++ b/src/app/pages/setting/role-manage/role-manage.component.html
@@ -107,7 +107,7 @@
   </form>
   <div class="menu-per">
     <label><span>菜单授权:</span></label>
-    <nz-tree class="menu-per-tree"
+    <nz-tree  #nzTreeComponent class="menu-per-tree"
       [nzData]="nzTreeMenusData"
       nzCheckable
       [nzCheckedKeys]="checkedKeys"
