好好学习，天天向上。

--- a/src/app/pages/setting/role-manage/role-manage.component.html
+++ b/src/app/pages/setting/role-manage/role-manage.component.html
@@ -58,7 +58,7 @@
           <td nzAlign="center">
             <a (click)="editRole(data.id)">编辑</a>
             <nz-divider nzType="vertical"></nz-divider>
-            <a>删除</a>
+            <a (click)="delRoleSingle(data.id)">删除</a>
           </td>
         </tr>
       </tbody>
