好好学习，天天向上

--- a/src/app/pages/setting/department-manage/department-manage.component.html
+++ b/src/app/pages/setting/department-manage/department-manage.component.html
@@ -30,7 +30,7 @@
           <td nzAlign="center">
             <a (click)="showEditModal(item.id)">修改</a>
             <nz-divider nzType="vertical"></nz-divider>
-            <a (click)="showDelModal(item.id, item.name)">删除</a>
+            <a (click)="del(item.id, item.name)">删除</a>
           </td>
         </tr>
       </ng-container>
