--- a/src/app/pages/setting/user-manage/user-manage.component.html
+++ b/src/app/pages/setting/user-manage/user-manage.component.html
@@ -11,7 +11,7 @@
     <button nz-button nzType="default" (click)="search()"><i nz-icon nzType="search"></i>查询</button>
     <button nz-button nzType="primary" (click)="addModalShow()"><i nz-icon type="plus"></i>新增</button>
     <button nz-button nzType="danger"><i nz-icon type="delete"></i>删除</button>
-    <button nz-button nzType="primary" style="background: grey"><i nz-icon nzType="export" nzTheme="outline"></i>导出</button>
+    <button nz-button nzType="default"><i nz-icon nzType="export" nzTheme="outline"></i>导出</button>
   </div>
   <!--<div class="list-table">
     <nz-table
@@ -82,31 +82,114 @@
 ></ng-template>
 
 <!--新增、编辑角色-->
-<!--<nz-modal *ngIf="isShowDialog"
-          [(nzVisible)]="isShowDialog"
+<nz-modal *ngIf="isShowAddOrEditModal"
+          [(nzVisible)]="isShowAddOrEditModal"
           nzWidth="800"
-          [nzTitle]="dialogType === 1 ? '新增' : '修改'"
-          (nzOnCancel)="handleCancelDialog(dialogType)"
-          (nzOnOk)="handleOkDialog(dialogType)"
-          [nzOkLoading]="isAddOkLoading">
+          [nzTitle]="modalType === 1 ? '新增' : '修改'"
+          (nzOnCancel)="handleCancel(modalType)"
+          (nzOnOk)="handleOk(modalType, addOrEditForm.value)"
+          [nzOkLoading]="isModalOkLoading">
 
   <form nz-form [formGroup]="addOrEditForm">
     <nz-form-item>
-      <nz-form-label [nzSm]="4" [nzXs]="24" nzFor="roleName" nzRequired>名称</nz-form-label>
-      <nz-form-control [nzSm]="10" [nzXs]="24">
-        <input nz-input id="roleName" formControlName="roleName" placeholder="角色名称"/>
-        <nz-form-explain *ngIf="addOrEditForm.get('roleName')?.dirty && addOrEditForm.get('roleName')?.errors">角色名称不为空!
-        </nz-form-explain>
+      <nz-form-label [nzSm]="4" [nzXs]="24" nzFor="username" nzRequired>用户名</nz-form-label>
+      <nz-form-control [nzSm]="10" [nzXs]="24" nzHasFeedback nzValidatingTip="检查用户名..." [nzErrorTip]="userErrorTpl">
+        <input nz-input formControlName="username" placeholder="用户名" />
+        <ng-template #userErrorTpl let-control>
+          <ng-container *ngIf="control.hasError('required')">
+            请输入用户名!
+          </ng-container>
+          <ng-container *ngIf="control.hasError('duplicated')">
+            用户名已存在!
+          </ng-container>
+        </ng-template>
       </nz-form-control>
     </nz-form-item>
     <nz-form-item>
-      <nz-form-label [nzSm]="4" [nzXs]="24" nzFor="roleDesc" nzRequired>备注</nz-form-label>
+      <nz-form-label [nzSm]="4" [nzXs]="24" nzFor="dept" nzRequired>所属部门</nz-form-label>
       <nz-form-control [nzSm]="10" [nzXs]="24">
-        <input nz-input id="roleDesc" formControlName="roleDesc"
-               placeholder="备注"/>
-        <nz-form-explain *ngIf="addOrEditForm.get('roleDesc')?.dirty && addOrEditForm.get('roleDesc')?.errors">备注不能为空!</nz-form-explain>
+        <nz-input-group nzSearch [nzAddOnAfter]="suffixIconSearchDeptButton">
+          <input nz-input id="dept" formControlName="dept"
+                 placeholder="选择部门"/>
+        </nz-input-group>
+        <nz-form-explain *ngIf="addOrEditForm.get('dept')?.dirty && addOrEditForm.get('dept')?.errors">请选择部门</nz-form-explain>
+      </nz-form-control>
+    </nz-form-item>
+    <!--密码-->
+    <nz-form-item>
+      <nz-form-label [nzSm]="4" [nzXs]="24" nzRequired>密码</nz-form-label>
+      <div>
+        <nz-form-control [nzSm]="10" [nzXs]="24" nzHasFeedback nzErrorTip="请输入密码!">
+          <input nz-input type="password" formControlName="password" (ngModelChange)="validateConfirmPassword()" placeholder="密码"/>
+        </nz-form-control>
+      </div>
+    </nz-form-item>
+    <nz-form-item>
+      <nz-form-label [nzSm]="4" [nzXs]="24" nzRequired>确认密码</nz-form-label>
+      <nz-form-control [nzSm]="10" [nzXs]="24" nzHasFeedback [nzErrorTip]="passwordErrorTpl">
+        <input nz-input type="password" formControlName="confirm" placeholder="确认密码" />
+        <ng-template #passwordErrorTpl let-control>
+          <ng-container *ngIf="control.hasError('required')">
+            请再次输入密码!
+          </ng-container>
+          <ng-container *ngIf="control.hasError('confirm')">
+            确认密码和密码不一致!
+          </ng-container>
+        </ng-template>
+      </nz-form-control>
+    </nz-form-item>
+    <!--性别-->
+    <nz-form-item>
+      <nz-form-label [nzSm]="4" [nzXs]="24">性别</nz-form-label>
+      <nz-form-control [nzSm]="10" [nzXs]="24">
+        <nz-radio-group formControlName="sex" [(ngModel)]="sexRadioValue">
+          <label nz-radio nzValue="1">男</label>
+          <label nz-radio nzValue="2">女</label>
+          <label nz-radio nzValue="0">保密</label>
+        </nz-radio-group>
+      </nz-form-control>
+    </nz-form-item>
+    <!--email-->
+    <nz-form-item>
+      <nz-form-label [nzSm]="4" [nzXs]="24">邮箱</nz-form-label>
+      <nz-form-control [nzSm]="10" [nzXs]="24" nzHasFeedback [nzErrorTip]="emailErrorTpl">
+        <input nz-input formControlName="email" placeholder="电子邮箱" type="email" />
+        <ng-template #emailErrorTpl let-control>
+          <ng-container *ngIf="control.hasError('email')">
+            电子邮箱格式错误!
+          </ng-container>
+        </ng-template>
+      </nz-form-control>
+    </nz-form-item>
+    <!--手机号码-->
+    <nz-form-item>
+      <nz-form-label [nzSm]="4" [nzXs]="24">手机号码</nz-form-label>
+      <nz-form-control [nzSm]="10" [nzXs]="24">
+        <input nz-input id="mobile" formControlName="mobile" placeholder="11位手机号码"/>
+      </nz-form-control>
+    </nz-form-item>
+    <!--角色-->
+    <nz-form-item>
+      <nz-form-label [nzSm]="4" [nzXs]="24">角色配置</nz-form-label>
+      <nz-form-control [nzSm]="10" [nzXs]="24">
+        <nz-select id="role" formControlName="role" [ngModel]="1">
+          <nz-option nzLabel="管理员" nzValue="1"></nz-option>
+        </nz-select>
+      </nz-form-control>
+    </nz-form-item>
+    <!--用户状态-->
+    <nz-form-item>
+      <nz-form-label [nzSm]="4" [nzXs]="24">状态</nz-form-label>
+      <nz-form-control [nzSm]="10" [nzXs]="24">
+        <nz-radio-group formControlName="status" [(ngModel)]="status">
+          <label nz-radio nzValue="-1">停用</label>
+          <label nz-radio nzValue="1">正常</label>
+        </nz-radio-group>
       </nz-form-control>
     </nz-form-item>
   </form>
+</nz-modal>
 
-</nz-modal>-->
+<ng-template #suffixIconSearchDeptButton>
+  <button nz-button nzType="primary" nzSearch><i nz-icon nzType="search"></i></button>
+</ng-template>
