--- a/src/app/pages/setting/role-manage/role-manage.component.less
+++ b/src/app/pages/setting/role-manage/role-manage.component.less
@@ -25,7 +25,8 @@ nz-form-control {
 
 .per {
   min-height: 400px;
-  overflow-y: scroll;
+  //overflow-y: scroll;
+  overflow-y: hidden; // 隐藏滚动条，美观点
 
   &-menu {
     float: left;
