--- a/src/app/pages/setting/role-manage/role-manage.component.html
+++ b/src/app/pages/setting/role-manage/role-manage.component.html
@@ -1,14 +1,11 @@
 <nz-card class="list" nzTitle="角色列表">
   <div class="list-action">
-    <nz-select [(ngModel)]="appSelected" style="min-width: 200px">
-      <nz-option *ngFor="let appInfo of appDataList" [nzLabel]="appInfo.appName" [nzValue]="appInfo.appId"></nz-option>
-    </nz-select>
     <nz-input-group [nzSuffix]="suffixTemplate">
       <input type="text" nz-input [(ngModel)]="roleName" placeholder="角色名称"/>
     </nz-input-group>
-    <button nz-button nzType="default" (click)="search()"><i nz-icon nzType="search"></i>查询</button>
+    <button nz-button nzType="default" (click)="search(true)"><i nz-icon nzType="search"></i>查询</button>
     <button nz-button nzType="primary" (click)="addRole()"><i nz-icon type="plus"></i>新增</button>
-    <button nz-button nzType="danger"><i nz-icon type="delete"></i>删除</button>
+    <button nz-button nzType="danger" (click)="delBatch()"><i nz-icon type="delete"></i>删除</button>
   </div>
   <div class="list-table">
     <nz-table
@@ -58,7 +55,7 @@
           <td nzAlign="center">
             <a (click)="editRole(data.id)">编辑</a>
             <nz-divider nzType="vertical"></nz-divider>
-            <a (click)="delRoleSingle(data.id)">删除</a>
+            <a (click)="delRoleSingle(data.id, data.roleName)">删除</a>
           </td>
         </tr>
       </tbody>
