--- a/src/app/pages/setting/user-manage/user-manage.component.html
+++ b/src/app/pages/setting/user-manage/user-manage.component.html
@@ -1,19 +1,19 @@
 <nz-card class="list" nzTitle="角色列表">
   <div class="list-action">
     <nz-input-group [nzSuffix]="usernameSuffixTemplate">
-      <input type="text" nz-input [(ngModel)]="username" placeholder="用户名称"/>
+      <input type="text" nz-input [(ngModel)]="vUserSearchReq.username" placeholder="用户名称"/>
     </nz-input-group>
-    <nz-select [(ngModel)]="sexSelected" style="min-width: 200px">
+    <nz-select nzShowSearch nzAllowClear nzPlaceHolder="性别" [(ngModel)]="vUserSearchReq.sex" style="min-width: 200px">
       <nz-option [nzLabel]="'男'" [nzValue]="1"></nz-option>
       <nz-option [nzLabel]="'女'" [nzValue]="2"></nz-option>
       <nz-option [nzLabel]="'保密'" [nzValue]="0"></nz-option>
     </nz-select>
-    <button nz-button nzType="default" (click)="search()"><i nz-icon nzType="search"></i>查询</button>
+    <button nz-button nzType="default" (click)="search(true)"><i nz-icon nzType="search"></i>查询</button>
     <button nz-button nzType="primary" (click)="addModalShow()"><i nz-icon type="plus"></i>新增</button>
     <button nz-button nzType="danger"><i nz-icon type="delete"></i>删除</button>
     <button nz-button nzType="default"><i nz-icon nzType="export" nzTheme="outline"></i>导出</button>
   </div>
-  <!--<div class="list-table">
+  <div class="list-table">
     <nz-table
       #userTable
       nzShowPagination
@@ -37,26 +37,34 @@
           [nzIndeterminate]="isIndeterminate"
           (nzCheckedChange)="checkAll($event)"
         ></th>
-        <th nzWidth="30%" nzAlign="center">名称</th>
-        <th nzWidth="30%" nzAlign="center">备注</th>
-        <th nzWidth="20%" nzAlign="center"
+        <th nzWidth="12%" nzAlign="center">用户名</th>
+        <th nzWidth="12%" nzAlign="center">所属部门</th>
+        <th nzWidth="12%" nzAlign="center">邮箱</th>
+        <th nzWidth="12%" nzAlign="center">手机号码</th>
+        <th nzWidth="12%" nzAlign="center">性别</th>
+        <th nzWidth="12%" nzAlign="center">状态</th>
+        <th nzWidth="12%" nzAlign="center"
             nzShowSort
         >
           创建时间
         </th>
-        <th nzWidth="20%" nzAlign="center">操作</th>
+        <th nzWidth="16%" nzAlign="center">操作</th>
       </tr>
       </thead>
       <tbody>
-      <tr *ngFor="let data of roleTable.data">
+      <tr *ngFor="let data of userTable.data">
         <td
           nzShowCheckbox
           [(nzChecked)]="mapOfCheckedId[data.id]"
           [nzDisabled]="data.disabled"
           (nzCheckedChange)="refreshStatus()"
         ></td>
-        <td nzAlign="center">{{ data.roleName }}</td>
-        <td nzAlign="center">{{ data.description }}</td>
+        <td nzAlign="center">{{ data.username }}</td>
+        <td nzAlign="center">{{ data.deptName }}</td>
+        <td nzAlign="center">{{ data.email }}</td>
+        <td nzAlign="center">{{ data.mobile }}</td>
+        <td nzAlign="center">{{ data.sexTypeName }}</td>
+        <td nzAlign="center">{{ data.statusName}}</td>
         <td nzAlign="center">{{ data.dateCreated }}</td>
         <td nzAlign="center">
           <a (click)="editRole(data.id)">编辑</a>
@@ -66,7 +74,7 @@
       </tr>
       </tbody>
     </nz-table>
-  </div>-->
+  </div>
 </nz-card>
 
 <ng-template #usernameSuffixTemplate
@@ -76,8 +84,8 @@
   class="ant-input-clear-icon"
   nzTheme="fill"
   nzType="close-circle"
-  *ngIf="username"
-  (click)="username = null"
+  *ngIf="vUserSearchReq.username"
+  (click)="vUserSearchReq.username = null"
 ></i
 ></ng-template>
 
@@ -88,7 +96,7 @@
           [nzMaskClosable]="false"
           [nzTitle]="modalType === 1 ? '新增' : '修改'"
           (nzOnCancel)="handleCancel(modalType)"
-          (nzOnOk)="handleOk(modalType, addOrEditForm.value)"
+          (nzOnOk)="handleOk()"
           [nzOkLoading]="isModalOkLoading">
 
   <form nz-form [formGroup]="addOrEditForm">
@@ -108,13 +116,13 @@
     </nz-form-item>
     <!--部门-->
     <nz-form-item>
-      <nz-form-label [nzSm]="4" [nzXs]="24" nzFor="dept" nzRequired>所属部门</nz-form-label>
+      <nz-form-label [nzSm]="4" [nzXs]="24" nzFor="deptId" nzRequired>所属部门</nz-form-label>
       <nz-form-control [nzSm]="10" [nzXs]="24">
         <nz-input-group nzSearch [nzAddOnAfter]="suffixIconSearchDeptButton">
-          <input nz-input id="dept" formControlName="dept"
+          <input nz-input id="deptId" formControlName="deptId"
                  placeholder="选择部门" (click)="showDeptSearchModal()" readonly/>
         </nz-input-group>
-        <nz-form-explain *ngIf="addOrEditForm.get('dept')?.dirty && addOrEditForm.get('dept')?.errors">请选择部门</nz-form-explain>
+        <nz-form-explain *ngIf="addOrEditForm.get('deptId')?.dirty && addOrEditForm.get('deptId')?.errors">请选择部门</nz-form-explain>
       </nz-form-control>
     </nz-form-item>
     <!--密码-->
@@ -149,6 +157,20 @@
         </nz-form-explain>
       </nz-form-control>
     </nz-form-item>
+    <!--手机号码-->
+    <nz-form-item>
+      <nz-form-label [nzSm]="4" [nzXs]="24" nzFor="mobile" nzRequired>手机号码</nz-form-label>
+      <nz-form-control [nzSm]="10" [nzXs]="24">
+        <input nz-input id="mobile" formControlName="mobile" placeholder="11位手机号码"/>
+        <nz-form-explain *ngIf="addOrEditForm.get('mobile')?.dirty && addOrEditForm.get('mobile')?.errors">请输入正确手机号码!
+        </nz-form-explain>
+        <!--<ng-template #mobileErrorTpl let-control>
+          <ng-container *ngIf="control.hasError('maxLength')">
+            11位手机号码!
+          </ng-container>
+        </ng-template>-->
+      </nz-form-control>
+    </nz-form-item>
     <!--性别-->
     <nz-form-item>
       <nz-form-label [nzSm]="4" [nzXs]="24">性别</nz-form-label>
@@ -172,23 +194,11 @@
         </ng-template>
       </nz-form-control>
     </nz-form-item>
-    <!--手机号码-->
-    <nz-form-item>
-      <nz-form-label [nzSm]="4" [nzXs]="24">手机号码</nz-form-label>
-      <nz-form-control [nzSm]="10" [nzXs]="24" nzHasFeedback>
-        <input nz-input id="mobile" formControlName="mobile" placeholder="11位手机号码"/>
-        <!--<ng-template #mobileErrorTpl let-control>
-          <ng-container *ngIf="control.hasError('maxLength')">
-            11位手机号码!
-          </ng-container>
-        </ng-template>-->
-      </nz-form-control>
-    </nz-form-item>
     <!--角色-->
     <nz-form-item>
       <nz-form-label [nzSm]="4" [nzXs]="24">角色配置</nz-form-label>
       <nz-form-control [nzSm]="10" [nzXs]="24">
-        <nz-select id="role" formControlName="role" nzPlaceHolder="请选择角色" [ngModel]="selectedRole">
+        <nz-select id="roleId" formControlName="roleId" nzShowSearch nzAllowClear nzPlaceHolder="请选择角色">
           <nz-option *ngFor="let role of roleList" [nzLabel]="role.roleName" [nzValue]="role.id"></nz-option>
         </nz-select>
       </nz-form-control>
@@ -198,7 +208,7 @@
       <nz-form-label [nzSm]="4" [nzXs]="24">状态</nz-form-label>
       <nz-form-control [nzSm]="10" [nzXs]="24">
         <nz-radio-group formControlName="status">
-          <label nz-radio nzValue="-1">停用</label>
+          <label nz-radio nzValue="4">停用</label>
           <label nz-radio nzValue="1">正常</label>
         </nz-radio-group>
       </nz-form-control>
